[gd_scene load_steps=4 format=3 uid="uid://d4hbyolxsvjpt"]

[ext_resource type="Script" uid="uid://bs8o55vy3fpkt" path="res://totem/recipe_container.gd" id="1_c65kp"]
[ext_resource type="Texture2D" uid="uid://dfj26ibwe2waf" path="res://tile_0035.png" id="1_hlasx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c65kp"]
bg_color = Color(0.890196, 0.85098, 0.780392, 0)

[node name="RecipeContainer" type="PanelContainer"]
offset_left = -26.0
offset_top = -56.0
offset_right = 30.0
offset_bottom = -16.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c65kp")
script = ExtResource("1_c65kp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ConsumesContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ArrowRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_hlasx")

[node name="ProducesContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
